Adicionei imagens para que possa colocar nossa foto

--- a/Site Sprint 2/Home.html
+++ b/Site Sprint 2/Home.html
@@ -73,6 +73,7 @@
             </div>
         </section>
 
+
         <section class="sec_sobre">
 
             <div class="sobre">
@@ -103,6 +104,33 @@
                     <h3>O que fazemos?</h3>
                     <p>Somos uma empresa focada em análise de fluxo de pessoas com ênfase em marketing.</p>
                 </div>
+            </div>
+
+        </section>
+        <section class="nos">
+
+            <div class="divnos">
+            <img src="img/htmll.jpeg" alt="">
+            <h2>Nome</h2>
+            </div>
+            <div class="divnos">
+                <img src="img/htmll.jpeg" alt="">
+                <h2>Nome</h2>
+            </div>
+            <div class="divnos">
+                <img src="img/htmll.jpeg" alt="">
+            <h2>Nome</h2>
+
+            </div>
+            <div class="divnos">
+                <img src="img/htmll.jpeg" alt="">
+            <h2>Nome</h2>
+
+            </div>
+            <div class="divnos">
+                <img src="img/htmll.jpeg" alt="">
+            <h2>Nome</h2>
+
             </div>
 
         </section>
