--- a/Site Sprint 2/Index.html
+++ b/Site Sprint 2/Index.html
@@ -1,1 +1,147 @@
-!
+<!DOCTYPE html>
+<html lang="pt">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./css.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <div class="cent">
+            <nav>
+                <a class="link" href="">HOME</a>
+                <a class="link" href="">Sobre nós</a>
+                <a class="link" href="">Servicos</a>
+                <a class="link" href="">Contato</a>
+            </nav>
+
+
+            <button class="btn_cads">Login/Cadastre-se</button>
+
+        </div>
+    </header>
+    <main>
+        <section class="homee">
+            <div class="artshop">
+                <div class="div_shop">
+                    <h2>Banco de dados</h2>
+                    <p>Dados Armazenados de forma inteligente e de prática vizualização</p>
+                </div>
+            </div>
+
+            <div class="artshop">
+                <div class="div_shop">
+                    <h2>Sensores</h2>
+                    <p>Sensores instalados estratégicamente para análise de dados </p>
+                </div>
+            </div>
+
+            <div class="artshop">
+                <div class="div_shop">
+                    <h2>Suporte Técnico</h2>
+                    <p>Suporte, instalação e manutenção recorrentes</p>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="homee">
+            <div class="artshop">
+                <div class="div_shop">
+                    <h2>Gráfico Dinâmico</h2>
+                    <p>Informação em tempo real sobre o fluxo de pessoas em forma de gráfico</p>
+                </div>
+            </div>
+
+            <div class="artshop">
+                <div class="div_shop">
+                    <h2>Alugueis Realistas</h2>
+                    <p>Defina preços de alugueis com mais exatidão</p>
+                </div>
+            </div>
+
+            <div class="artshop">
+                <div class="div_shop">
+                    <h2>HOT ZONE</h2>
+                    <p>Descubra quis setores são mais atraentes para o publico</p>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="sec_sobre">
+
+            <div class="sobre">
+
+                <div class="div_texto">
+
+                    <h1>Quem somos nos?</h1>
+                    <br>
+                    <br>
+
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio aut ab recusandae architecto
+                        id
+                        rem nostrum, sapiente eos totam qui maxime corporis ducimus! Nostrum laboriosam, voluptas
+                        dignissimos exercitationem est quia.</p>
+                </div>
+                <div class="div_img">
+                    <img class="img_sobre" src="img/logo.jpg" alt="">
+                </div>
+
+            </div>
+
+
+            <div class="missao">
+                <div>
+                    <h3>Nossa missão</h3>
+                    <p>fornecer dados estratégicos para melhorar o desempenho de shoppings com uso de tecnologia.</p>
+                </div>
+
+                <div>
+                    <h3>O que fazemos?</h3>
+                    <p>Somos uma empresa focada em análise de fluxo de pessoas com ênfase em marketing.</p>
+                </div>
+            </div>
+
+        </section>
+        <section class="nos">
+
+            <div class="divnos">
+                <img src="img/art.jpg" alt="">
+                <h2>Arthur Pereira Chacon</h2>
+            </div>
+            <div class="divnos">
+                <img src="img/gabri.jpg" alt="">
+                <h2>Gabriel de Oliveira Damas</h2>
+            </div>
+            <div class="divnos">
+                <img src="img/gustt.jpg" alt="">
+                <h2>Gustavo Carneiro da Costa</h2>
+
+            </div>
+            <div class="divnos">
+                <img src="img/joao.jpg" alt="">
+                <h2>João Pedro Siqueira de Carvalho</h2>
+
+            </div>
+            <div class="divnos">
+                <img src="img/wesley.jpg" alt="">
+                <h2>Wesley Monteiro Freitas de Souza </h2>
+
+            </div>
+
+        </section>
+    </main>
+
+
+    <footer>
+             
+    </footer>
+</body>
+
+</html>
