--- a/Site Sprint 2/Index.html
+++ b/Site Sprint 2/Index.html
@@ -87,7 +87,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio aut ab recusandae architecto
                         id
                         rem nostrum, sapiente eos totam qui maxime corporis ducimus! Nostrum laboriosam, voluptas
-                        dignissimos exercitationem est quia.</p>
+                        dignissimos exercitationem estsss quia.</p>
                 </div>
                 <div class="div_img">
                     <img class="img_sobre" src="img/logo.jpg" alt="">
