--- a/Site Sprint 2/Index.html
+++ b/Site Sprint 2/Index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./css.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/451870fbf6.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -34,7 +34,7 @@
 
     <div class="main">
         <div id="servico_um">
-            <div class="artshop">
+            <div class="div_conteudo">
                 <div class="div_shop">
                     <div>
                         <i class="fas fa-database"></i>
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <div class="artshop">
+            <div class="div_conteudo">
                 <div class="div_shop">
                     <div>
                         <i class="far fa-lightbulb"></i>
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <div class="artshop">
+            <div class="div_conteudo">
                 <div class="div_shop">
                     <div>
                         <i class="fas fa-tools"></i>
@@ -67,7 +67,7 @@
         </div>
 
         <div id="servico_dois">
-            <div class="artshop">
+            <div class="div_conteudo">
                 <div class="div_shop">
                     <div>
                         <i class="fas fa-signal"></i>
@@ -78,7 +78,7 @@
                 </div>
             </div>
 
-            <div class="artshop">
+            <div class="div_conteudo">
                 <div class="div_shop">
                     <div>
                         <i class="fas fa-piggy-bank"></i>
@@ -86,11 +86,11 @@
                     </div>
                     <p>Defina preços de alugueis com mais exatidão</p>
 
-                    <button class="calcfi"> <a href="./financeira.html">Calculadora Finaceira</a></button>
+                    <button class="calcfi"> <a href="./calculadora-financeira.html">Calculadora Finaceira</a></button>
                 </div>
             </div>
 
-            <div class="artshop">
+            <div class="div_conteudo">
                 <div class="div_shop">
                     <div>
                         <i class="fas fa-fire-alt"></i>
@@ -104,7 +104,7 @@
         </div>
 
 
-        <div class="sec_sobre">
+        <div class="div_sobre">
 
             <div id="sobre">
 
